--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-@media only screen and (min-width: 376px) and(max-width: 1440px) {
+@media only screen and (min-width: 376px) and(max-width: 500px) {
   body {
     display: grid;
     place-items: center;
@@ -27,17 +27,37 @@ body {
 }
 
 .container {
+  position: fixed;
   height: 85%;
   width: 90%;
   background-color: white;
   border-radius: 18px;
+  overflow-y: scroll;
 }
 
-@media only screen and (min-width: 376px) and (max-width: 1440px) {
+@media only screen and (min-width: 376px) and (max-width: 500px) {
   .container {
-    width: 28%;
+    width: 90%;
     height: 85%;
   }
+}
+
+@media only screen and (min-width: 501px) and (max-width: 850px) {
+  .container {
+    width: 70%;
+    height: 85%;
+  }
+}
+
+@media only screen and (min-width: 851px) and (max-width: 1440px) {
+  .container {
+    width: 40%;
+    height: 85%;
+  }
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 .img {
@@ -76,6 +96,7 @@ body {
   border-radius: 8px;
   padding: 10px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 30px;
 }
@@ -126,7 +147,7 @@ button {
 
 .btn > button + button {
   background-color: transparent;
-  margin-top: 25px;
+  margin: 25px 0px;
   color: hsl(224, 28%, 46%);
 }
 
