--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body {
 }
 
 .container {
-  position: fixed;
   height: 85%;
   width: 90%;
   background-color: white;
@@ -52,6 +51,13 @@ body {
 @media only screen and (min-width: 851px) and (max-width: 1440px) {
   .container {
     width: 40%;
+    height: 85%;
+  }
+}
+
+@media only screen and (max-width: 1440px) {
+  .container {
+    width: 30%;
     height: 85%;
   }
 }
