--- a/style.css
+++ b/style.css
@@ -35,6 +35,13 @@ body {
   overflow-y: scroll;
 }
 
+@media only screen and (max-width: 376px) {
+  .container {
+    width: 90%;
+    height: 85%;
+  }
+}
+
 @media only screen and (min-width: 376px) and (max-width: 500px) {
   .container {
     width: 90%;
@@ -83,6 +90,9 @@ body {
   margin: auto;
   padding-top: 25px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .content > h2 {
